--- a/src/css/bezel.scss
+++ b/src/css/bezel.scss
@@ -16,12 +16,12 @@
         width: 52px;
         padding: 12px;
         box-sizing: border-box;
-        background: rgba(0, 0, 0, .5);
+        background: rgba(0, 0, 0, 0.5);
         border-radius: 50%;
         opacity: 0;
         pointer-events: none;
         &.dplayer-bezel-transition {
-            animation: bezel-hide .5s linear;
+            animation: bezel-hide 0.5s linear;
         }
         @keyframes bezel-hide {
             from {
@@ -35,6 +35,7 @@
         }
     }
     .dplayer-danloading {
+        display: none;
         position: absolute;
         top: 50%;
         margin-top: -7px;
@@ -57,27 +58,27 @@
             display: none;
         }
         .diplayer-loading-dot {
-            animation: diplayer-loading-dot-fade .8s ease infinite;
+            animation: diplayer-loading-dot-fade 0.8s ease infinite;
             opacity: 0;
             transform-origin: 4px 4px;
             @for $i from 7 through 1 {
                 &.diplayer-loading-dot-#{$i} {
-                    animation-delay: .1s * $i;
+                    animation-delay: 0.1s * $i;
                 }
             }
         }
         @keyframes diplayer-loading-dot-fade {
             0% {
-                opacity: .7;
-                transform: scale(1.2, 1.2)
+                opacity: 0.7;
+                transform: scale(1.2, 1.2);
             }
             50% {
-                opacity: .25;
-                transform: scale(.9, .9)
+                opacity: 0.25;
+                transform: scale(0.9, 0.9);
             }
             to {
-                opacity: .25;
-                transform: scale(.85, .85)
+                opacity: 0.25;
+                transform: scale(0.85, 0.85);
             }
         }
     }
