--- a/src/css/controller.scss
+++ b/src/css/controller.scss
@@ -269,20 +269,33 @@
                 left: 0;
                 box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
                 border-radius: 4px;
-                padding: 10px 10px 16px;
                 font-size: 14px;
-                width: 380px;
+                width: 318px;
                 transition: all 0.3s ease-in-out;
                 transform: scale(0);
+                padding: 8px 0 10px 10px;
 
                 &.mydplayer-emoji-open {
                     transform: scale(1);
                 }
 
-                img {
+                .emojiBox {
+                    width: 34px;
+                    height: 34px;
+                    display: inline-flex;
                     cursor: pointer;
-                    width: 30px;
-                    height: 30px;
+                    justify-content: center;
+                    align-items: center;
+
+                    &:hover {
+                        background: #59595b;
+                        border-radius: 2px;
+                    }
+
+                    img {
+                        width: 22px;
+                        height: 22px;
+                    }
                 }
             }
 
